k8s/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-test
  labels:
    app.kubernetes.io/name: ticketing-system
    app.kubernetes.io/environment: test
