k8s/test/mongo-support-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongo-support
  name: mongo-support
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-support
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.test.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: mongo-support
    spec:
      containers:
        - image: mongo:7
          name: mongo-support-test
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-support-test
      restartPolicy: Always
      volumes:
        - name: mongo-support-test
          persistentVolumeClaim:
            claimName: mongo-support-test
