k8s/test/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "6001"
      port: 6001
      targetPort: 6001
  selector:
    io.kompose.service: auth-service
