k8s/test/mongo-ticket-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongo-ticket
  name: mongo-ticket
spec:
  ports:
    - name: "28018"
      port: 28018
      targetPort: 27017
  selector:
    io.kompose.service: mongo-ticket
