k8s/test/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  ports:
    - name: "6004"
      port: 6004
      targetPort: 6004
  selector:
    io.kompose.service: notification-service
