k8s/test/reporting-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: reporting-service
  name: reporting-service
spec:
  ports:
    - name: "6005"
      port: 6005
      targetPort: 6005
  selector:
    io.kompose.service: reporting-service
