k8s/test/support-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: support-service
  name: support-service
spec:
  ports:
    - name: "6003"
      port: 6003
      targetPort: 6003
  selector:
    io.kompose.service: support-service
