k8s/test/ticket-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.test.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: ticket-service
  name: ticket-service
spec:
  ports:
    - name: "6002"
      port: 6002
      targetPort: 6002
  selector:
    io.kompose.service: ticket-service
